# robomaker_workshop

./: .gitignore  CMakeLists.txt  README.md  fetch_dataset.sh  package.xml  setup.sh
.catkin_tools/profiles/default/: devel_collisions.txt
backup/: main.bk.launch  main.bk.py  simulation.bk.launch
config/: kinesis.yaml  px100.gazebo
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/interbotix_xsarm_moveit/: .catkin  .rosinstall
devel/.private/px100_simulation/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  interbotix_xsarm_moveit.pc  px100_simulation.pc
images/: image_cap.ini
launch/: camera.launch  description.launch  kvstreamer.launch  main.launch  px100.launch  robot.bk.launch  simulation.launch
models/bitcoin/: model.config  model.sdf
models/dash/: model.config  model.sdf
models/etherium/: model.config  model.sdf
models/etherium/meshes/: etherium.stl
models/litecoin/: model.config  model.sdf
models/monero/: model.sdf
models/monero/meshes/: monero.stl
models/my_camera/: model.config  model.sdf
models/my_table/: model.config  model.sdf
models/zcash/: model.config  model.sdf
nodes/: aws_utilities.py  collect.py  px100.py
rviz/: px100.rviz
scripts/: aws_utilities.py  aws_utilities_bk.py  bartender.py  collect.py  generate_worlds.py  init.py  main.py  main_master.py  px100.py  save_sample.py  utilities.py
urdf/: px100.urdf.xacro
worlds/: px100-0.world  px100-1.world  px100-2.world  px100-3.world  px100-4.world  px100-5.world  px100-6.world  px100-7.world  px100-8.world  px100-9.world  px100.world  template.world
(+25 files in other folders)
